// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZcashBalance renders component 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="stretch"
  container={true}
  direction="row"
  justify="flex-start"
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Typography))
      className="title-mock"
      variant="body2"
    >
      Available
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Grid))
      align="center"
      container={true}
      direction="row"
      justify="space-between"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(UsdBalance)
          value={"3243.25"}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="zec-mock"
        item={true}
      >
        <Memo(WithStyles(ZecBalance))
          size={16}
          style="white"
          value={"12.323212"}
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`ZcashBalance renders when balanced locked 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="stretch"
  container={true}
  direction="row"
  justify="flex-start"
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  >
    <WithStyles(ForwardRef(Typography))
      className="title-mock"
      variant="body2"
    >
      Available
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Grid))
      align="center"
      container={true}
      direction="row"
      justify="space-between"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(UsdBalance)
          value={"0"}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="zec-mock"
        item={true}
      >
        <Memo(WithStyles(ZecBalance))
          size={16}
          style="white"
          value={"0"}
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <ForwardRef(Grow)
    in={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(ForwardRef(Grid))
        alignItems="center"
        className="lockedRoot-mock"
        container={true}
        direction="row"
        justify="space-evenly"
        spacing={0}
      >
        <WithStyles(ForwardRef(Grid))
          className="alignHorizontal-mock"
          item={true}
          xs={2}
        >
          <SpinnerLoader
            classes={null}
            size={30}
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          alignItems="center"
          container={true}
          item={true}
          xs={7}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(Typography))
              className="lockedTitle-mock"
              display="inline"
              variant="caption"
            >
              Pending 
              <span
                className="usd-mock"
              >
                $
                3,243.25
              </span>
               USD
            </WithStyles(ForwardRef(Typography))>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(ForwardRef(Typography))
              variant="caption"
            >
              12.323212
               ZEC
            </WithStyles(ForwardRef(Typography))>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="alignHorizontal-mock"
          item={true}
          xs={2}
        >
          <InfoOutlinedIcon
            className="icon-mock"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </ForwardRef(Grow)>
</WithStyles(ForwardRef(Grid))>
`;
